--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    <header>
-        <div class="banner-img">
+    <header class="banner-img">
+        <div>
             <h3 class="header-small">Happy New Year</h3>
             <h1 class="header-big">New Year Party Celebration</h1>
         </div>
@@ -25,7 +25,7 @@
                 <img class="offer-img" src="/resources/New Year Photo.png" alt="">
         </section>
         <section>
-            <div class="section-banner section-gap-second">
+            <div class="section-banner section-gap-second main-gap">
                 <div class="midnight-width">
                     <h1 class="midnight-party-heading">Welcome to midnight party</h1>
                     <p class="midnight-party-description">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
@@ -35,6 +35,13 @@
                     <img class="section-img-midnight" src="/resources/Group 70.png" alt="">
                 </div>
             </div>
+        </section>
+
+        <section class="place-info">
+            <h3 class="place-text"> <span class="place-red">Place:</span> New Park Hotel</h3>
+            <h3 class="place-text"><span class="place-red">Date:</span> 31 December Night 2023</h3>
+            <h3 class="place-text"><span class="place-red">Time:</span> Evening 7.30 pm to 12.30 am</h3>
+            <button class="btn-section">JOIN NOW</button>
         </section>
     </main>
 </body>
