--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         <section class="section-gap-first">
                 <h1 class="offer-big-heading">65% OFF</h1>
                 <h4 class="section-subheading offer-subheading">OUR HOLIDAY DEALS ARE BETTER</h4>
-                <h2 class="offer-categories">ALL CATEGORIES</h2>
-                <img class="offer-img" src="/resources/New Year Photo.png" alt="">
+                <h2 class="offer-categories offer-color">ALL CATEGORIES</h2>
+                <img class="offer-img" src="./resources/New Year Photo.png" alt="">
         </section>
         <section>
             <div class="section-banner section-gap-second main-gap">
@@ -32,7 +32,7 @@
                     <button class="midnight-party-btn">Join Now</button>
                 </div>
                 <div>
-                    <img class="section-img-midnight" src="/resources/Group 70.png" alt="">
+                    <img class="section-img-midnight" src="./resources/Group 70.png" alt="">
                 </div>
             </div>
         </section>
@@ -43,6 +43,35 @@
             <h3 class="place-text"><span class="place-red">Time:</span> Evening 7.30 pm to 12.30 am</h3>
             <button class="btn-section">JOIN NOW</button>
         </section>
+
+        <section class="coming-gap">
+            <div class="coming-left-div">
+                <h4 class="section-subheading">NEW BEST OFFER</h4>
+                <h2 class="section-merri-heading">Coming Soon</h2>
+                <p class="section-description-new left-para">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+            </div>
+            <div class="img-border">
+                <img class="image-circle" src="./resources/Ellipse 1.png" alt="">
+            </div>
+            <div>
+                <h2 class="offer-categories year-color">2024</h2>
+                <p class="section-description-new right-para">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.</p>
+                <img class="img-new-year" src="./resources/Group 96.png" alt="">
+            </div>
+        </section>
+            
+        <section class="holiday-section">
+            <div class="holiday-text">
+                <h4 class="section-subheading functional-color">WHAT IS FUNCTIONAL</h4>
+                <h1 class="heading-style-color"><span class="heading-color">Holidays</span> Sale 50%</h1>
+                <p class="holiday">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. Eleifend nunc purus quam id fermentum amet amet sit consectetur.</p>
+            </div>
+            <div class="image-optional">
+                <img src="" alt="" class="optional-one">
+                <img src="" alt="" class="optional-two">
+            </div>
+        </section>
+
     </main>
 </body>
 </html>
