--- a/index.html
+++ b/index.html
@@ -67,8 +67,10 @@
                 <p class="holiday">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. Eleifend nunc purus quam id fermentum amet amet sit consectetur.</p>
             </div>
             <div class="image-optional">
-                <img src="" alt="" class="optional-one">
-                <img src="" alt="" class="optional-two">
+                <img src="./resources/Group 75.png" alt="" class="optional-one">
+                <img src="./resources/Group 44.png" alt="" class="optional-two">
+            </div>
+            <div>
             </div>
         </section>
 
