--- a/index.html
+++ b/index.html
@@ -74,6 +74,37 @@
             </div>
         </section>
 
+        <section class="section-gifts">
+            <div class="gifts-text">
+                <h4 class="section-subheading">THE BEST GIFTS</h4>
+                <h2 class="section-merri-heading">Our Awesome Portfolio</h2>
+                <p class="section-description-new space-gift">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+            </div>
+            <div class="image-one">
+                <img src="./resources/Rectangle 3.png" alt="">
+                <img src="./resources/Rectangle 4.png" alt="">
+                <img src="./resources/Rectangle 5.png" alt="">
+            </div>
+            <div class="image-two">
+                <img src="./resources/Rectangle 6.png" alt="">
+                <img src="./resources/Rectangle 7.png" alt="">
+                <img src="./resources/Rectangle 8.png" alt="">
+            </div>
+        </section>
+
+        <section class="newsletter section-gifts">
+            <div class="newsletter-div">
+                <img class="email" src="./resources/Group 61.png" alt="">
+                <h2 class="section-merri-heading">Subscribe Newsletter</h2>
+                <p class="holiday extra-news">
+                    Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. 
+                </p>
+            </div>
+            <div class="input-btn">
+                <input class="btn-input" type="text" placeholder="user@gmail.com">
+                <button class="btn-design">Subscribe</button>
+            </div>
+        </section>
     </main>
 </body>
 </html>
