--- a/index.html
+++ b/index.html
@@ -106,5 +106,42 @@
             </div>
         </section>
     </main>
+    <footer class="footer">
+        <div class="footer-style">
+            <div class="contact-container">
+                <div class="address">
+                    <p class="padding">44, Big Building Roosevelt Street Beach Gardens Florida 33410</p>
+                </div>
+                <div class="contact">
+                    <div class="address phone">
+                        <img src="./resources/Call.png" alt="">
+                        <p class="inline">+00 123 584 124</p>
+                    </div>
+                    <div class="address website">
+                        <img src="./resources/Website.png" alt="">
+                        <p class="inline">www.website.com</p>
+                    </div>
+                </div>
+            </div>
+            <hr class="hrule">
+            <div class="social-media">
+                <img src="./resources/Facebook.png" alt="">
+                <img src="./resources/Instagram.png" alt="">
+                <img src="./resources/Twitter.png" alt="">
+                <img src="./resources/Linkedin.png" alt="">
+            </div>
+            <hr class="hrule">
+            <div class="contact-container">
+                <div class="address">
+                    <p>2017, All Rights Reserved.</p>
+                </div>
+                <div class="contact">
+                    <div class="address">
+                        <btn class="inline">Unsubscribe</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
