final commit -m with minor changes

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="section-banner section-gap-second main-gap">
                 <div class="midnight-width">
                     <h1 class="midnight-party-heading">Welcome to midnight party</h1>
-                    <p class="midnight-party-description">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+                    <p class="midnight-party-description">Welcome to the midnight celebration, where joy dances in the moonlight and laughter echoes through the starry night. </p>
                     <button class="midnight-party-btn">Join Now</button>
                 </div>
                 <div>
@@ -48,14 +48,14 @@
             <div class="coming-left-div">
                 <h4 class="section-subheading">NEW BEST OFFER</h4>
                 <h2 class="section-merri-heading">Coming Soon</h2>
-                <p class="section-description-new left-para">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+                <p class="section-description-new left-para">Exciting news! New best sales are on the horizon. Stay tuned for the upcoming promotions that will bring great deals and savings your way. </p>
             </div>
             <div class="img-border">
                 <img class="image-circle" src="./resources/Ellipse 1.png" alt="">
             </div>
             <div>
                 <h2 class="offer-categories year-color">2024</h2>
-                <p class="section-description-new right-para">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.</p>
+                <p class="section-description-new right-para">Welcoming 2024 with joy, hope, and countless new possibilities ahead.</p>
                 <img class="img-new-year" src="./resources/Group 96.png" alt="">
             </div>
         </section>
@@ -64,7 +64,7 @@
             <div class="holiday-text">
                 <h4 class="section-subheading functional-color">WHAT IS FUNCTIONAL</h4>
                 <h1 class="heading-style-color"><span class="heading-color">Holidays</span> Sale 50%</h1>
-                <p class="holiday">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. Eleifend nunc purus quam id fermentum amet amet sit consectetur.</p>
+                <p class="holiday">Holiday sales galore! Avail a fantastic 50% discount on a variety of products, adding joy and savings to your festive season shopping spree.</p>
             </div>
             <div class="image-optional">
                 <img src="./resources/Group 75.png" alt="" class="optional-one">
@@ -78,7 +78,7 @@
             <div class="gifts-text">
                 <h4 class="section-subheading">THE BEST GIFTS</h4>
                 <h2 class="section-merri-heading">Our Awesome Portfolio</h2>
-                <p class="section-description-new space-gift">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+                <p class="section-description-new space-gift">Discover the best gifts/items: curated, meaningful, and sure to delight, adding joy and special moments to any occasion. </p>
             </div>
             <div class="image-one">
                 <img src="./resources/Rectangle 3.png" alt="">
@@ -97,7 +97,7 @@
                 <img class="email" src="./resources/Group 61.png" alt="">
                 <h2 class="section-merri-heading">Subscribe Newsletter</h2>
                 <p class="holiday extra-news">
-                    Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. 
+                    Stay informed and inspired! Subscribe to our newsletter for the latest updates, exclusive content, and special offers. Join now! 
                 </p>
             </div>
             <div class="input-btn">
